<?xml version="1.0"?>
<package format="3">
    <name>fluent_rviz</name>
    <version>0.0.1</version>
    <description>A library to make Rviz markers fluent to use</description>

    <maintainer email="shouth@shouth.com">shouth</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ouxt_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
