<?xml version="1.0"?>
<package format="3">
    <name>fluent_rviz</name>
    <version>0.0.0</version>
    <description>A library which makes Rviz fluent. Powered by C++17</description>

    <maintainer email="shouth373@gmail.com">shouth</maintainer>
    <maintainer email="pythagora.yoshimoto@shouth.com">HansRobo</maintainer>

    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ouxt_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
